# leather

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  FEATURES.md  MANIFEST.in  README.rst  example.py  examples.sh  pyproject.toml  requirements-py2.txt  requirements-py3.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: ci.yml  lint_python.yml  pypi.yml
docs/: Makefile  about.rst  api.rst  conf.py  examples.rst  index.rst  install.rst  release_process.rst
docs/api/: axis.rst  chart.rst  grid.rst  lattice.rst  scales.rst  series.rst  shapes.rst  theme.rst
examples/: bars.py  colorized_dots.py  columns.py  csv_dict_reader.py  csv_reader.py  custom_data.py  dots.py  grid.py  grouped_bars.py  grouped_columns.py  lattice.py  linear.py  lines.py  lines_dashes.py  mixed_shapes.py  multiple_series.py  ordinal.py  series_color.py  simple_pairs.py  temporal.py  theme.py  tick_format.py  ticks.py
examples/realdata/: gii.csv  index.md
leather/: __init__.py  axis.py  chart.py  data_types.py  grid.py  lattice.py  legend.py  renderable.py  series.py  svg.py  testcase.py  theme.py  ticks.py  utils.py
leather/axes/: base.py  x.py  y.py
leather/scales/: __init__.py  annual.py  base.py  linear.py  months.py  ordinal.py  temporal.py  years.py
leather/series/: __init__.py  base.py  category.py
leather/shapes/: __init__.py  bars.py  base.py  category.py  column.py  columns.py  dot.py  dots.py  grouped_bars.py  grouped_columns.py  line.py  lines.py
leather/ticks/: __init__.py  base.py  score.py  score_time.py
tests/: test_axis.py  test_chart.py  test_grid.py  test_lattice.py  test_leather.py  test_scales.py  test_series.py  test_shapes.py  test_ticks.py  utils.py
