[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leather"
version = "0.4.1"
authors = [{name = "Christopher Groskopf", email = "chrisgroskopf@gmail.com"}]
description = "Python charting for 80% of humans."
readme = "README.rst"
license = {text = "MIT"}
urls = {Homepage = "https://leather.readthedocs.io/"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "lxml>=3.6.0",
    "cssselect>=0.9.1",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.isort]
line_length = 119
