[flake8]
max-line-length = 119
per-file-ignores =
    # imported but unused
    leather/__init__.py: F401
    leather/scales/__init__.py: F401
    leather/series/__init__.py: F401
    leather/shapes/__init__.py: F401
    leather/ticks/__init__.py: F401

[isort]
line_length = 119

[metadata]
license_file = COPYING
